# team-manager

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  scaff.bash  test.db  uvadd.bash
alembic/: env.py
alembic/versions/: 314099287941_add_comments_table.py  57d59fcda009_add_tasks_table.py  62af665470ee_add_team_id_to_users.py  87a916ebfca3_add_teams_table_and_team_id_to_users.py  ad7c75316c65_add_meetings_table.py  e36b43d3fa71_add_evaluations_table.py
src/config/: database.py  settings.py
src/domain/evaluations/: entities.py  interfaces.py  usecases.py
src/domain/meetings/: entities.py  interfaces.py  usecases.py
src/domain/tasks/: entities.py  interfaces.py  usecases.py  value_objects.py
src/domain/teams/: entities.py  interfaces.py  usecases.py  value_objects.py
src/domain/users/: entities.py  interfaces.py  usecases.py  value_objects.py
src/infra/auth/: jwt.py  password_hasher.py
src/infra/database/: models.py
src/infra/repositories/: evaluation_repository.py  meeting_repository.py  task_repository.py  team_repository.py  user_converter.py  user_repository.py
src/presentation/api/: admin.py  calendar.py  dependencies.py  evaluations.py  factory.py  frontend.py  meetings.py  tasks.py  teams.py  users.py
src/presentation/schemas/: calendar.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
src/presentation/templates/: base.html  dashboard.html  home.html  login.html  meetings.html  (+2 more)
tests/: conftest.py
tests/integration/: test_user_repository.py
(+10 files in other folders)
