[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]
